# 6DOF-Manipulator-Hardware

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: crustcrawler_effort.yaml  crustcrawler_position.yaml  crustcrawler_trajectory.yaml  crustcrawler_trajectory_small.yaml  crustcrawler_velocity.yaml
include/crustcrawler_hardware/: crustcrawler.hpp  dynamixel.hpp
launch/: control.launch
src/: controller_node.cpp  crustcrawler.cpp  dynamixel.cpp
